Add other Consensus Economics forecasts

--- a/RUS-ADO.ipynb
+++ b/RUS-ADO.ipynb
@@ -2,17 +2,17 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Set country to ADB country code of country\n",
-    "country = 'ARM'"
+    "country = 'RUS'"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -34,7 +34,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -75,7 +75,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -176,7 +176,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -245,14 +245,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 62,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -344,27 +337,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
-   "metadata": {},
-   "outputs": [
-    {
-     "output_type": "execute_result",
-     "data": {
-      "text/plain": [
-       "<pandasgui.gui.PandasGui at 0x132028b73a8>"
-      ]
-     },
-     "metadata": {},
-     "execution_count": 63
-    }
-   ],
-   "source": [
-    "show(df_all)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 64,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -416,7 +389,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 65,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -479,7 +452,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 66,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -506,7 +479,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 67,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -573,7 +546,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 68,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -643,7 +616,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 69,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -698,7 +671,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 70,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -733,7 +706,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 71,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -769,7 +742,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 72,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -796,7 +769,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 73,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -817,7 +790,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 74,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -835,10 +808,11 @@
     "\n",
     "# Add a paragraph on Consensus Forecasts\n",
     "p = doc.add_heading(f\"Outlook {'tilted downwards' if country_codes[country_codes.index==country].forecast_gdp_current[0].round(1) < 0 else 'favorable'} this year\")\n",
-    "p = doc.add_paragraph(f\"On {country_codes[country_codes.index==country].forecast_date[0]}, Consensus Economics panelists project {country_codes.country_name[country]}'s economic growth ending in {country_codes[country_codes.index==country].forecast_date[0][-4:]} at {country_codes[country_codes.index==country].forecast_gdp_current[0].round(1)}%. In {int(country_codes[country_codes.index==country].forecast_date[0][-4:]) + 1} and {int(country_codes[country_codes.index==country].forecast_date[0][-4:]) + 2}, the panelists foresee growth at {country_codes[country_codes.index==country].forecast_gdp_1step[0].round(1)}% and {country_codes[country_codes.index==country].forecast_gdp_2step[0].round(1)}%, respectively.\")\n",
+    "p = doc.add_paragraph(f\"On {country_codes[country_codes.index==country].forecast_date[0]}, Consensus Economics panelists project {country_codes.country_name[country]}'s economic growth ending in {country_codes[country_codes.index==country].forecast_date[0][-4:]} at {country_codes[country_codes.index==country].forecast_gdp_current[0].round(1)}%. In {int(country_codes[country_codes.index==country].forecast_date[0][-4:]) + 1}, the panelists foresee growth at {country_codes[country_codes.index==country].forecast_gdp_1step[0].round(1)}%. Over the same period, consumption is expected to grow by {country_codes[country_codes.index==country].forecast_con_current[0].round(1)}% and {country_codes[country_codes.index==country].forecast_con_1step[0].round(1)}%, while investment is projected to grow by {country_codes[country_codes.index==country].forecast_inv_current[0].round(1)}% and {country_codes[country_codes.index==country].forecast_inv_1step[0].round(1)}%. On the supply side, industrial production is seen to grow by {country_codes[country_codes.index==country].forecast_ip_current[0].round(1)}% and {country_codes[country_codes.index==country].forecast_ip_current[0].round(1)}%.\") \n",
     "p.alignment = WD_ALIGN_PARAGRAPH.JUSTIFY\n",
     "\n",
-    "p = doc.add_paragraph(f\"Meanwhile, Consensus Economics panelists foresee inflation ending in {country_codes[country_codes.index==country].forecast_date[0][-4:]} at {country_codes[country_codes.index==country].forecast_inf_current[0].round(1)}%. In {int(country_codes[country_codes.index==country].forecast_date[0][-4:]) + 1} and {int(country_codes[country_codes.index==country].forecast_date[0][-4:]) + 2}, the panelists project inflation at {country_codes[country_codes.index==country].forecast_inf_1step[0].round(1)}% and {country_codes[country_codes.index==country].forecast_inf_2step[0].round(1)}%, respectively.\")\n",
+    "p = doc.add_paragraph(f\"Meanwhile, Consensus Economics panelists foresee inflation ending in {country_codes[country_codes.index==country].forecast_date[0][-4:]} at {country_codes[country_codes.index==country].forecast_inf_current[0].round(1)}%. In {int(country_codes[country_codes.index==country].forecast_date[0][-4:]) + 1}, the panelists project inflation at {country_codes[country_codes.index==country].forecast_inf_1step[0].round(1)}%.\")\n",
+    "p.alignment = WD_ALIGN_PARAGRAPH.JUSTIFY\n",
     "\n",
     "# Add a paragraph on Risks\n",
     "# p = doc.add_paragraph('Risks', style='List Number')\n",
@@ -846,13 +820,6 @@
     "# Save the .docx file into the local folder\n",
     "doc.save(f'{country} ADO Quick Report.docx')"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
