Fix bugs for Russia

--- a/RUS-ADO.ipynb
+++ b/RUS-ADO.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 58,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 59,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -34,7 +34,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 60,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -75,7 +75,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 61,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -176,7 +176,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 62,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -245,7 +245,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 63,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -337,7 +337,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 64,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -389,7 +389,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 65,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -452,7 +452,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 66,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -479,7 +479,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 67,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -532,7 +532,7 @@
     "    if height > 0:\n",
     "        axs[1].text(rect.get_x() + rect.get_width() / 2, height, str(label) + '%', ha='center', va='bottom')\n",
     "    else:\n",
-    "        axs[1].text(rect.get_x() + rect.get_width() / 2, height  - 0.1, str(label) + '%', ha='center', va='bottom')\n",
+    "        axs[1].text(rect.get_x() + rect.get_width() / 2, height  - 0.2, str(label) + '%', ha='center', va='bottom')\n",
     "    \n",
     "# Save to local folder\n",
     "plt.savefig(f'{country}_unemployment_inflation.png')\n",
@@ -546,7 +546,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 68,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -616,7 +616,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 69,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -629,7 +629,7 @@
     "            change[f'{item}'] = random.choice(['decreased', 'contracted', 'shrank', 'declined', 'plunged'])\n",
     "    \n",
     "    # Create dataframe for top growth rates of GDP components on the demand side\n",
-    "    top_demand_growth_quarterly = df_gdp_growth_quarterly.last('Q')[[item for item in df_gdp_growth_quarterly.columns]].transpose().sort_values(by=df_gdp_growth_quarterly.last('Q').index[0], ascending=False)\n",
+    "    top_demand_growth_quarterly = df_gdp_growth_quarterly.last('Q')[[item for item in df_gdp_growth_quarterly.columns if item != 'GDP growth']].transpose().sort_values(by=df_gdp_growth_quarterly.last('Q').index[0], ascending=False)\n",
     "\n",
     "    p = doc.add_heading(f\"Output {'contracted' if df_gdp_growth_quarterly['GDP growth'].last('2Q').values[-1] < 0 else 'expanded'} in Q{df_gdp_growth_quarterly.last('2Q').index[-1].quarter} {df_gdp_growth_quarterly.last('2Q').index[-1].year}\", level=1)\n",
     "    p = doc.add_paragraph(f\"Output {'plunged' if df_gdp_growth_quarterly['GDP growth'].last('2Q').values[-1] < 0 else 'jumped'} by {abs(df_gdp_growth_quarterly['GDP growth'].last('2Q').values[-1])}% year-on-year in Q{df_gdp_growth_quarterly.last('2Q').index[-1].quarter} of {df_gdp_growth_quarterly.last('2Q').index[-1].year}. Growth in overall economic activity {'improved' if df_gdp_growth_quarterly['GDP growth'].last('2Q').values[-1] > df_gdp_growth_quarterly['GDP growth'].last('2Q').values[-2] else 'worsened'} from {'a contraction of ' + str(abs(df_gdp_growth_quarterly['GDP growth'].last('2Q').values[-2])) if df_gdp_growth_quarterly['GDP growth'].last('2Q').values[-2] < 0 else df_gdp_growth_quarterly['GDP growth'].last('2Q').values[-2]}% in the previous quarter. {top_demand_growth_quarterly.index[0]} {change[top_demand_growth_quarterly.index[0]]} by the biggest margin at {top_demand_growth_quarterly.values.max()}% annual growth.\")\n",
@@ -671,7 +671,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 70,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -706,7 +706,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 71,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -742,7 +742,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 72,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -769,7 +769,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 73,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -790,7 +790,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 74,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -808,7 +808,7 @@
     "\n",
     "# Add a paragraph on Consensus Forecasts\n",
     "p = doc.add_heading(f\"Outlook {'tilted downwards' if country_codes[country_codes.index==country].forecast_gdp_current[0].round(1) < 0 else 'favorable'} this year\")\n",
-    "p = doc.add_paragraph(f\"On {country_codes[country_codes.index==country].forecast_date[0]}, Consensus Economics panelists project {country_codes.country_name[country]}'s economic growth ending in {country_codes[country_codes.index==country].forecast_date[0][-4:]} at {country_codes[country_codes.index==country].forecast_gdp_current[0].round(1)}%. In {int(country_codes[country_codes.index==country].forecast_date[0][-4:]) + 1}, the panelists foresee growth at {country_codes[country_codes.index==country].forecast_gdp_1step[0].round(1)}%. Over the same period, consumption is expected to grow by {country_codes[country_codes.index==country].forecast_con_current[0].round(1)}% and {country_codes[country_codes.index==country].forecast_con_1step[0].round(1)}%, while investment is projected to grow by {country_codes[country_codes.index==country].forecast_inv_current[0].round(1)}% and {country_codes[country_codes.index==country].forecast_inv_1step[0].round(1)}%. On the supply side, industrial production is seen to grow by {country_codes[country_codes.index==country].forecast_ip_current[0].round(1)}% and {country_codes[country_codes.index==country].forecast_ip_current[0].round(1)}%.\") \n",
+    "p = doc.add_paragraph(f\"On {country_codes[country_codes.index==country].forecast_date[0]}, Consensus Economics panelists project {country_codes.country_name[country]}'s economic growth ending in {country_codes[country_codes.index==country].forecast_date[0][-4:]} at {country_codes[country_codes.index==country].forecast_gdp_current[0].round(1)}%. In {int(country_codes[country_codes.index==country].forecast_date[0][-4:]) + 1}, the panelists foresee growth at {country_codes[country_codes.index==country].forecast_gdp_1step[0].round(1)}%. {'Over the same period, consumption is expected to grow by ' + str(country_codes[country_codes.index==country].forecast_con_current[0].round(1)) + '% and ' + str(country_codes[country_codes.index==country].forecast_con_1step[0].round(1)) +'%, while investment is projected to grow by ' + str(country_codes[country_codes.index==country].forecast_inv_current[0].round(1)) + '% and ' + str(country_codes[country_codes.index==country].forecast_inv_1step[0].round(1)) +'%.' if ~np.isnan(country_codes[country_codes.index==country].forecast_con_current[0].round(1)) else ''} On the supply side, industrial production is seen to grow by {country_codes[country_codes.index==country].forecast_ip_current[0].round(1)}% and {country_codes[country_codes.index==country].forecast_ip_current[0].round(1)}%.\") \n",
     "p.alignment = WD_ALIGN_PARAGRAPH.JUSTIFY\n",
     "\n",
     "p = doc.add_paragraph(f\"Meanwhile, Consensus Economics panelists foresee inflation ending in {country_codes[country_codes.index==country].forecast_date[0][-4:]} at {country_codes[country_codes.index==country].forecast_inf_current[0].round(1)}%. In {int(country_codes[country_codes.index==country].forecast_date[0][-4:]) + 1}, the panelists project inflation at {country_codes[country_codes.index==country].forecast_inf_1step[0].round(1)}%.\")\n",
@@ -818,7 +818,7 @@
     "# p = doc.add_paragraph('Risks', style='List Number')\n",
     "\n",
     "# Save the .docx file into the local folder\n",
-    "doc.save(f'{country} ADO Quick Report.docx')"
+    "doc.save(f'{country}-Recent-Economic-Developments.docx')"
    ]
   }
  ],
