Fix bugs in quarterly growth analysis

--- a/RUS-ADO.ipynb
+++ b/RUS-ADO.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": 206,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": 207,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -29,12 +29,13 @@
     "import random\n",
     "import Haver\n",
     "import calendar\n",
+    "import re\n",
     "from pandasgui import show"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": 208,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -75,18 +76,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": 209,
    "metadata": {},
    "outputs": [],
    "source": [
-    "gdp_growth_quarterly_codes = {'ngpc': 'GDP growth', \n",
+    "gdp_growth_quarterly_codes = {'ngpc': 'GDP growth',\n",
     "                              'nchc': 'Household consumption',\n",
     "                              'ncpc': 'Private consumption',\n",
     "                              'ncgc': 'Government expenditure',\n",
     "                              'nfbc': 'Gross capital formation',\n",
-    "                              'nxnc': 'Net exports'}\n",
+    "                              'nxnc': 'Net exports',\n",
+    "                              'ngpy': 'GDP growth',\n",
+    "                              'ncpy': 'Household consumption',\n",
+    "                              'ncgy': 'Government expenditure',\n",
+    "                              'nfby': 'Gross capital formation',\n",
+    "                              'nxy': 'Exports',\n",
+    "                              'nmy': 'Imports'}\n",
     "gdp_growth_quarterly_country = [str(country_codes.haver_code[country]) + item for item in gdp_growth_quarterly_codes.keys()]\n",
-    "gdp_growth_quarterly_indicators = ['h' + item for item in gdp_growth_quarterly_country] + ['s' + item for item in gdp_growth_quarterly_country]\n",
+    "gdp_growth_quarterly_indicators = ['h' + item for item in gdp_growth_quarterly_country] + ['s' + item for item in gdp_growth_quarterly_country] + ['n' + item for item in gdp_growth_quarterly_country]\n",
     "df_gdp_growth_quarterly = Haver.data(gdp_growth_quarterly_indicators, database='emerge', dates=True)\n",
     "if type(df_gdp_growth_quarterly) is not dict:\n",
     "    df_gdp_growth_quarterly = df_gdp_growth_quarterly[[item for item in df_gdp_growth_quarterly if item.startswith('h')]]\n",
@@ -98,6 +105,9 @@
     "        df_gdp_growth_quarterly = df_gdp_growth_quarterly[[item for item in df_gdp_growth_quarterly if item.startswith('h')]]\n",
     "        df_gdp_growth_quarterly = (df_gdp_growth_quarterly.pct_change(4, fill_method=None) * 100).round(1).tail(5).dropna()\n",
     "        df_gdp_growth_quarterly.columns = [gdp_growth_quarterly_codes[item[-4:]] for item in df_gdp_growth_quarterly.columns]\n",
+    "    elif len([item for item in df_gdp_growth_quarterly if item.startswith('n')]) > 0:\n",
+    "        df_gdp_growth_quarterly = df_gdp_growth_quarterly[[item for item in df_gdp_growth_quarterly if item.startswith('n')]].round(1).tail(5).dropna()\n",
+    "        df_gdp_growth_quarterly.columns = [gdp_growth_quarterly_codes[re.sub('[0-9]+', '', item[-4:])] for item in df_gdp_growth_quarterly.columns]\n",
     "    else:\n",
     "        df_gdp_growth_quarterly = (df_gdp_growth_quarterly.pct_change(4, fill_method=None) * 100).round(1).tail(5).dropna()\n",
     "        df_gdp_growth_quarterly.columns = [gdp_growth_quarterly_codes[item[-4:]] for item in df_gdp_growth_quarterly.columns]\n",
@@ -176,7 +186,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 62,
+   "execution_count": 210,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -245,7 +255,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": 211,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -337,7 +347,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 64,
+   "execution_count": 212,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -389,7 +399,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 65,
+   "execution_count": 213,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -452,7 +462,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 66,
+   "execution_count": 214,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -479,7 +489,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 67,
+   "execution_count": 215,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -546,7 +556,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 68,
+   "execution_count": 216,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -616,7 +626,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 69,
+   "execution_count": 217,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -647,6 +657,9 @@
     "        p.add_run(f\" On the other hand, {top_demand_growth_quarterly.loc[top_demand_growth_quarterly.values < 0].index[-1].lower()} and {top_demand_growth_quarterly.loc[top_demand_growth_quarterly.values < 0].index[-2].lower()} {change[top_demand_growth_quarterly.loc[top_demand_growth_quarterly.values < 0].index[-2]]} by {abs(top_demand_growth_quarterly.values[-1][0])}% and {abs(top_demand_growth_quarterly.values[-2][0])}%, respectively.\")\n",
     "    elif sum(top_demand_growth_quarterly.values < 0)[0] == 3:\n",
     "        p.add_run(f\" On the other hand, {top_demand_growth_quarterly.loc[top_demand_growth_quarterly.values < 0].index[-1].lower()}, {top_demand_growth_quarterly.loc[top_demand_growth_quarterly.values < 0].index[-2].lower()}, as well as  {top_demand_growth_quarterly.loc[top_demand_growth_quarterly.values < 0].index[-3].lower()}, {change[top_demand_growth_quarterly.loc[top_demand_growth_quarterly.values < 0].index[-3]]} by {abs(top_demand_growth_quarterly.values[-1][0])}%, {abs(top_demand_growth_quarterly.values[-2][0])}%, and {abs(top_demand_growth_quarterly.values[-3][0])}%, respectively.\")\n",
+    "    else:\n",
+    "        p.add_run(f\" On the other hand, the rest of the components, namely {top_demand_growth_quarterly.loc[top_demand_growth_quarterly.values < 0].index[-1].lower()}, {top_demand_growth_quarterly.loc[top_demand_growth_quarterly.values < 0].index[-2].lower()}, {top_demand_growth_quarterly.loc[top_demand_growth_quarterly.values < 0].index[-3].lower()}, as well as  {top_demand_growth_quarterly.loc[top_demand_growth_quarterly.values < 0].index[-4].lower()}, {change[top_demand_growth_quarterly.loc[top_demand_growth_quarterly.values < 0].index[-4]]} by {abs(top_demand_growth_quarterly.values[-1][0])}%, {abs(top_demand_growth_quarterly.values[-2][0])}%, {abs(top_demand_growth_quarterly.values[-3][0])}%, and {abs(top_demand_growth_quarterly.values[-4][0])}%, respectively.\")\n",
+    "\n",
     "\n",
     "    if sum(top_demand_growth_quarterly.values == 0)[0] > 0:\n",
     "        p.add_run(f\" Meanwhile, {top_demand_growth_quarterly.loc[top_demand_growth_quarterly.values == 0].index[-1].lower()} was flat over the same period.\")\n",
@@ -671,7 +684,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 70,
+   "execution_count": 218,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -706,7 +719,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 71,
+   "execution_count": 219,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -742,7 +755,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 72,
+   "execution_count": 220,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -769,7 +782,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 73,
+   "execution_count": 221,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -790,7 +803,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 74,
+   "execution_count": 222,
    "metadata": {},
    "outputs": [],
    "source": [
