Fix bugs on quarterly indicators analysis

--- a/RUS-ADO.ipynb
+++ b/RUS-ADO.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 206,
+   "execution_count": 302,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 207,
+   "execution_count": 303,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -35,7 +35,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 208,
+   "execution_count": 304,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -76,7 +76,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 209,
+   "execution_count": 305,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -140,9 +140,10 @@
     "                     'dvw': 'Water supply, sewerage, waste management & remediation',\n",
     "                     'dvu': 'Electricity, gas, steam and air conditioning supply'}\n",
     "production_country = [str(country_codes.haver_code[country]) + item for item in production_codes.keys()]\n",
-    "production_indicators = ['s' + item for item in production_country]\n",
+    "production_indicators = ['s' + item for item in production_country] + ['n' + item for item in production_country]\n",
     "df_production = Haver.data(production_indicators, database='emerge', dates=True)\n",
     "if type(df_production) is not dict:\n",
+    "    df_production = df_production[[item for tem in df_production.columns if item.startswith('s')]]\n",
     "    df_production = (df_production.pct_change(12, fill_method=None) * 100).round(1).tail(13).dropna()\n",
     "    df_production.columns = [production_codes[''.join([i for i in (item[-3:]) if not i.isdigit()])] for item in df_production.columns]\n",
     "elif df_production['codelists']['codesfound']:\n",
@@ -186,7 +187,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 210,
+   "execution_count": 306,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -255,7 +256,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 211,
+   "execution_count": 307,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -347,7 +348,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 212,
+   "execution_count": 308,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -399,7 +400,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 213,
+   "execution_count": 309,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -462,7 +463,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 214,
+   "execution_count": 310,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -489,7 +490,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 215,
+   "execution_count": 311,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -556,7 +557,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 216,
+   "execution_count": 312,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -626,7 +627,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 217,
+   "execution_count": 313,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -684,7 +685,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 218,
+   "execution_count": 314,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -719,7 +720,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 219,
+   "execution_count": 315,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -740,10 +741,9 @@
     "                                                      'Electricity, gas, steam and air conditioning supply']):\n",
     "        p = doc.add_heading(f\"Industrial output {'shrank' if df_production['Industrial production'].values[-1] < 0 else 'expanded'}\", level=2)\n",
     "        p = doc.add_paragraph(f\"Industrial production {'shrank' if df_production['Industrial production'].values[-1] < 0 else 'expanded'} by {abs(df_production['Industrial production'].values[-1])}% year-on-year in {calendar.month_name[df_production.index[-1].month]}, a{'n increase' if df_production['Industrial production'].values[-1] > df_production['Industrial production'].values[-2] else ' decrease'} from {df_production['Industrial production'].values[-2]}% growth in the previous month. Looking at the details, growth in manufacturing {change_production['Manufacturing']} to {df_production['Manufacturing'].values[-1]}% from {df_production['Manufacturing'].values[-2]}%, while mining and quarrying output growth {change_production['Mining and quarrying']} to {df_production['Mining and quarrying'].values[-1]}% from {df_production['Mining and quarrying'].values[-2]}%. Meanwhile, growth in water supply, sewerage, waste management & remediation {change_production['Water supply, sewerage, waste management & remediation']} to {df_production['Water supply, sewerage, waste management & remediation'].values[-1]}% from {df_production['Water supply, sewerage, waste management & remediation'].values[-2]}%, while electricity, gas, steam and air conditioning supply output growth {change_production['Electricity, gas, steam and air conditioning supply']} to {df_production['Electricity, gas, steam and air conditioning supply'].values[-1]}% from {df_production['Electricity, gas, steam and air conditioning supply'].values[-2]}%\")\n",
-    "    elif all(item in df_production.columns for item in ['Industrial Production', 'Manufacturing']):\n",
-    "        p = doc.add_heading(f\"Industrial output growth {change_production['Industrial production']}\", level=2)\n",
+    "    elif all(item in df_production.columns for item in ['Industrial production', 'Manufacturing']):\n",
     "        p = doc.add_heading(f\"Industrial output {'shrank' if df_production['Industrial production'].values[-1] < 0 else 'expanded'}\", level=2)\n",
-    "        p = doc.add_paragraph(f\"Industrial production {'shrank' if df_production['Industrial production'].values[-1] < 0 else 'expanded'} by {abs(df_production['Industrial production'].values[-1])}% year-on-year in {calendar.month_name[df_production.index[-1].month]}, a{'n increase' if df_production['Industrial production'].values[-1] > df_production['Industrial production'].values[-2] else 'decrease'} from {df_production['Industrial production'].values[-2]}% growth in the previous month. Growth in manufacturing {change_production[f'{item}']} to {df_production['Manufacturing'].values[-1]}% from {df_production['Manufacturing'].values[-2]}%.\")\n",
+    "        p = doc.add_paragraph(f\"Industrial production {'shrank' if df_production['Industrial production'].values[-1] < 0 else 'expanded'} by {abs(df_production['Industrial production'].values[-1])}% year-on-year in {calendar.month_name[df_production.index[-1].month]}, a{'n increase' if df_production['Industrial production'].values[-1] > df_production['Industrial production'].values[-2] else 'decrease'} from {df_production['Industrial production'].values[-2]}% growth in the previous month. Growth in manufacturing {change_production['Manufacturing']} to {df_production['Manufacturing'].values[-1]}% from {df_production['Manufacturing'].values[-2]}%.\")\n",
     "    elif 'Industrial production' in df_production.columns:\n",
     "        p = doc.add_heading(f\"Industrial output {'shrank' if df_production['Industrial production'].values[-1] < 0 else 'expanded'}\", level=2)\n",
     "        p = doc.add_paragraph(f\"Industrial production {'shrank' if df_production['Industrial production'].values[-1] < 0 else 'expanded'} by {abs(df_production['Industrial production'].values[-1])}% year-on-year in {calendar.month_name[df_production.index[-1].month]}, a{'n increase' if df_production['Industrial production'].values[-1] > df_production['Industrial production'].values[-2] else 'decrease'} from {df_production['Industrial production'].values[-2]}% growth in the previous month.\")\n",
@@ -755,7 +755,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 220,
+   "execution_count": 316,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -774,15 +774,18 @@
     "        p = doc.add_heading(f\"Inflation {change_cpi['Overall inflation']}\", level=2)\n",
     "        p = doc.add_paragraph(f\"Overall inflation {change_cpi['Overall inflation']} to {df_cpi['Overall inflation'].values[-1]}% year-on-year in {calendar.month_name[df_cpi.index[-1].month]} from {df_cpi['Overall inflation'].values[-2]}% in the previous month. Prices for food products {change_cpi['Food']} to {df_cpi['Food'].values[-1]}% from {df_cpi['Food'].values[-2]}%, while housing, rent, water, electricity, gas & other fuels {change_cpi['Housing, rent, water, electricity, gas & other fuels']} to {df_cpi['Housing, rent, water, electricity, gas & other fuels'].values[-1]}% from {df_cpi['Housing, rent, water, electricity, gas & other fuels'].values[-2]}%. Transportation {change_cpi['Transportation']} to {df_cpi['Transportation'].values[-1]}% from {df_cpi['Transportation'].values[-2]}%, while communication {change_cpi['Communication']} to {df_cpi['Communication'].values[-1]}% from {df_cpi['Communication'].values[-2]}%. Meanwhile, prices for health/medical care {change_cpi['Health/medical care']} to \\\n",
     "{df_cpi['Health/medical care'].values[-1]}% from {df_cpi['Health/medical care'].values[-2]}%, recreation {change_cpi['Recreation']} to {df_cpi['Recreation'].values[-1]}% from {df_cpi['Recreation'].values[-2]}%, and education {change_cpi['Education']} to {df_cpi['Education'].values[-1]}% from {df_cpi['Education'].values[-2]}%\")\n",
+    "    elif all(item in df_cpi.columns for item in ['Overall inflation', 'Food']):\n",
+    "        p = doc.add_heading(f\"Inflation {change_cpi['Overall inflation']}\", level=2)\n",
+    "        p = doc.add_paragraph(f\"Overall inflation {change_cpi['Overall inflation']} to {df_cpi['Overall inflation'].values[-1]}% year-on-year in {calendar.month_name[df_cpi.index[-1].month]} from {df_cpi['Overall inflation'].values[-2]}% in the previous month. Prices for food products {change_cpi['Food']} to {df_cpi['Food'].values[-1]}% from {df_cpi['Food'].values[-2]}%.\")\n",
     "    elif 'Overall inflation' in df_cpi.columns:\n",
     "        p = doc.add_heading(f\"Inflation {change_cpi['Overall inflation']}\", level=2)\n",
-    "        p = doc.add_paragraph(f\"Inflation: Overall inflation {change_cpi['Overall inflation']} to {df_cpi['Overall inflation'].values[-1]}% year-on-year in {calendar.month_name[df_cpi.index[-1].month]} from {df_cpi['Overall inflation'].values[-2]}% in the previous month.\")\n",
+    "        p = doc.add_paragraph(f\"Overall inflation {change_cpi['Overall inflation']} to {df_cpi['Overall inflation'].values[-1]}% year-on-year in {calendar.month_name[df_cpi.index[-1].month]} from {df_cpi['Overall inflation'].values[-2]}% in the previous month.\")\n",
     "    p.alignment = WD_ALIGN_PARAGRAPH.JUSTIFY"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 221,
+   "execution_count": 317,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -803,7 +806,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 222,
+   "execution_count": 318,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -821,7 +824,7 @@
     "\n",
     "# Add a paragraph on Consensus Forecasts\n",
     "p = doc.add_heading(f\"Outlook {'tilted downwards' if country_codes[country_codes.index==country].forecast_gdp_current[0].round(1) < 0 else 'favorable'} this year\")\n",
-    "p = doc.add_paragraph(f\"On {country_codes[country_codes.index==country].forecast_date[0]}, Consensus Economics panelists project {country_codes.country_name[country]}'s economic growth ending in {country_codes[country_codes.index==country].forecast_date[0][-4:]} at {country_codes[country_codes.index==country].forecast_gdp_current[0].round(1)}%. In {int(country_codes[country_codes.index==country].forecast_date[0][-4:]) + 1}, the panelists foresee growth at {country_codes[country_codes.index==country].forecast_gdp_1step[0].round(1)}%. {'Over the same period, consumption is expected to grow by ' + str(country_codes[country_codes.index==country].forecast_con_current[0].round(1)) + '% and ' + str(country_codes[country_codes.index==country].forecast_con_1step[0].round(1)) +'%, while investment is projected to grow by ' + str(country_codes[country_codes.index==country].forecast_inv_current[0].round(1)) + '% and ' + str(country_codes[country_codes.index==country].forecast_inv_1step[0].round(1)) +'%.' if ~np.isnan(country_codes[country_codes.index==country].forecast_con_current[0].round(1)) else ''} On the supply side, industrial production is seen to grow by {country_codes[country_codes.index==country].forecast_ip_current[0].round(1)}% and {country_codes[country_codes.index==country].forecast_ip_current[0].round(1)}%.\") \n",
+    "p = doc.add_paragraph(f\"On {country_codes[country_codes.index==country].forecast_date[0]}, Consensus Economics panelists project {country_codes.country_name[country]}'s economic growth ending in {country_codes[country_codes.index==country].forecast_date[0][-4:]} at {country_codes[country_codes.index==country].forecast_gdp_current[0].round(1)}%. In {int(country_codes[country_codes.index==country].forecast_date[0][-4:]) + 1}, the panelists foresee growth at {country_codes[country_codes.index==country].forecast_gdp_1step[0].round(1)}%. {'Over the same period, consumption is expected to grow by ' + str(country_codes[country_codes.index==country].forecast_con_current[0].round(1)) + '% and ' + str(country_codes[country_codes.index==country].forecast_con_1step[0].round(1)) +'%, while investment is projected to grow by ' + str(country_codes[country_codes.index==country].forecast_inv_current[0].round(1)) + '% and ' + str(country_codes[country_codes.index==country].forecast_inv_1step[0].round(1)) +'%.' if ~np.isnan(country_codes[country_codes.index==country].forecast_con_current[0].round(1)) else ''} Industrial production is seen to grow by {country_codes[country_codes.index==country].forecast_ip_current[0].round(1)}% and {country_codes[country_codes.index==country].forecast_ip_1step[0].round(1)}%.\") \n",
     "p.alignment = WD_ALIGN_PARAGRAPH.JUSTIFY\n",
     "\n",
     "p = doc.add_paragraph(f\"Meanwhile, Consensus Economics panelists foresee inflation ending in {country_codes[country_codes.index==country].forecast_date[0][-4:]} at {country_codes[country_codes.index==country].forecast_inf_current[0].round(1)}%. In {int(country_codes[country_codes.index==country].forecast_date[0][-4:]) + 1}, the panelists project inflation at {country_codes[country_codes.index==country].forecast_inf_1step[0].round(1)}%.\")\n",
@@ -831,7 +834,7 @@
     "# p = doc.add_paragraph('Risks', style='List Number')\n",
     "\n",
     "# Save the .docx file into the local folder\n",
-    "doc.save(f'{country}-Recent-Economic-Developments.docx')"
+    "doc.save(f'Country Reports/{country}-Recent-Economic-Developments.docx')"
    ]
   }
  ],
